HTML Header & Section 1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,51 @@
     <script defer type="module" src="/main.js"></script>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <header class="primary-header">
+      <div class="container">
+        <div class="even-columns">
+          <a href="#"><img src="images/logo.svg" alt="Fylo logo" /></a>
+          <nav class="nav-links">
+            <ul role="list">
+              <li><a href="#">Features</a></li>
+              <li><a href="#">Team</a></li>
+              <li><a href="#">Sign In</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <section class="section-1">
+          <div class="even-columns">
+            <div>
+              <h2>
+                All your files in one secure location, accessible anywhere.
+              </h2>
+              <p>
+                fylo stores your most important files in one secure location.
+                Access them whatever you need, share & collaborate with friends,
+                family & co-workers.
+              </p>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Enter your email..."
+                class="para"
+              />
+              <button class="button">Get Started</button>
+            </div>
+            <div>
+              <img
+                src="images/illustration-1.svg"
+                alt="Secure Files Illustration"
+              />
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
