HTML Section 2 (all sections in one container)

--- a/index.html
+++ b/index.html
@@ -53,6 +53,43 @@
             </div>
           </div>
         </section>
+        <section class="section-2">
+          <div class="even-columns">
+            <div>
+              <h2>Stay productive, whereever you are</h2>
+              <p>
+                Never let location be an issue when accessing your files. Fylo
+                has you covered for all of your file storage needs.
+              </p>
+              <p>
+                Securely share files and folders with friends, family &
+                colleagues for live collaboration. No email attachments
+                required.
+              </p>
+              <p><a href="#">See how Fylo works</a></p>
+              <article class="testimonial">
+                <img src="images/icon-quotes.svg" alt="Icon Quotes" />
+                <p>
+                  Fylo have improved our team productivity by an order of
+                  magnitude. Since making the switch has become well-oiled
+                  collaboration machine.
+                </p>
+                <img
+                  src="images/avatar-testimonial.jpg"
+                  alt="Testimonial Avatar"
+                />
+                <p class="name">Kyle Burton</p>
+                <p class="name-description">Founder & CEO, Huddie</p>
+              </article>
+            </div>
+            <div>
+              <img
+                src="images/illustration-2.svg"
+                alt="Sharing files through Fylo"
+              />
+            </div>
+          </div>
+        </section>
       </div>
     </main>
   </body>
