changed containers for padding and bg-color

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       </div>
     </header>
     <main>
-      <div class="container">
-        <section class="section-1">
+      <!-- Use the container for each section and class it differnetly so different backgrounds can be placed but have one common for the padding--] -->
+      <section class="section-1">
+        <div class="container">
           <div class="even-columns">
             <div>
               <h2>
@@ -52,8 +53,10 @@
               />
             </div>
           </div>
-        </section>
-        <section class="section-2">
+        </div>
+      </section>
+      <section class="section-2">
+        <div class="container">
           <div class="even-columns">
             <div>
               <h2>Stay productive, whereever you are</h2>
@@ -89,8 +92,8 @@
               />
             </div>
           </div>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
