section 3 and footer layout

--- a/index.html
+++ b/index.html
@@ -94,6 +94,43 @@
           </div>
         </div>
       </section>
+      <section class="section-3">
+        <div class="container">
+          <div class="even-columns">
+            <div>
+              <h2>Get early access today</h2>
+              <p>
+                It only take a minute to sign up & our free starter tier is
+                extremly generous. If you have any question our support team
+                would be happy to help you.
+              </p>
+            </div>
+            <div>
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="   youremail@example.com"
+              />
+              <br />
+              <button class="button">Get Started for Free</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <div class="logo">
+          <img src="images/logo.svg" alt="Fyro Logo" />
+        </div>
+        <div class="even-columns">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
